--- a/index.css
+++ b/index.css
@@ -172,15 +172,13 @@ body {
   margin-top: -5vw;
   margin-left: -5vw;
   position: absolute;
-  transition: transform .7s ease, opacity .7s;
+  transition: transform .6s ease;
   background: #fff;
   z-index: 9;
   transform: scale(0) translateZ(0);
-  opacity: 0;
 }
 .circle.show {
   transform: scale(20) translateZ(0);
-  opacity: 1;
 }
 
 .close {
