--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 }
 .separator-top {
   width: 0;
@@ -162,7 +163,7 @@ body {
   z-index: 5;
 }
 .description {
-  font-size: 16px;
+  font-size: 1em;
   text-align: left;
 }
 
