--- a/index.css
+++ b/index.css
@@ -166,6 +166,11 @@ body {
   font-size: 1em;
   text-align: left;
 }
+@media only screen and (min-width:1600px){
+    body {
+      font-size: 32px;
+    }
+}
 
 .circle {
   border-radius: 100%;
